# Taspla

./: README.md  docker-compose.yml
Taspla/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
Taspla/src/: App.vue
Taspla/src-tauri/: Cargo.toml  tauri.conf.json
Taspla/src-tauri/src/: main.rs
Taspla/src/components/: AppHeader.vue  CreateTaskModal.vue  SideMenu.vue  TaskCard.vue  TaskList.vue
Taspla/src/composables/: useAuth.ts  useSettings.ts  useTasks.ts
Taspla/src/router/: index.ts
Taspla/src/types/: task.ts
Taspla/src/utils/: api.ts  cookies.ts
Taspla/src/views/: Home.vue  Login.vue  Profile.vue  Register.vue  Settings.vue
nginx/: nginx.conf
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: .env  main.rs
services/auth-service/: .env  Cargo.toml  Dockerfile
services/auth-service/src/: main.rs
services/auth-service/src/handlers/: auth.rs
services/auth-service/src/middleware/: auth.rs
services/auth-service/src/models/: user.rs
services/tasks-service/: .env  Cargo.toml  Dockerfile
services/tasks-service/src/: auth.rs  main.rs
services/tasks-service/src/handlers/: settings.rs  tasks.rs
services/tasks-service/src/models/: mod.rs  settings.rs  task.rs
